--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
         "watch": "webpack --mode development --watch"
     },
     "dependencies": {
+        "@babel/runtime": "^7.14.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2"
     },
     "devDependencies": {
         "@babel/core": "^7.13.10",
         "@babel/plugin-proposal-class-properties": "^7.13.0",
+        "@babel/plugin-transform-runtime": "^7.13.15",
         "@babel/preset-env": "^7.13.12",
         "@babel/preset-react": "^7.13.13",
         "@babel/preset-typescript": "^7.13.0",
